feat: add game to web worker

--- a/godot-client/.godot/editor/editor_layout.cfg
+++ b/godot-client/.godot/editor/editor_layout.cfg
@@ -9,30 +9,32 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://main.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://world/", "res://player/", "res://assets/")
+dock_filesystem_selected_paths=PackedStringArray("res://addons/gut/utils.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://world/", "res://player/", "res://assets/", "res://addons/", "res://addons/gut/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
 dock_bottom=[]
 dock_closed=[]
 dock_split_2=0
-dock_split_3=0
+dock_split_3=624
 dock_hsplit_1=0
 dock_hsplit_2=265
-dock_hsplit_3=-525
+dock_hsplit_3=-579
 dock_hsplit_4=0
+dock_6_selected_tab_idx=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
-dock_5="Inspector,Node,History,VstChatDock"
+dock_5="Inspector,Node,History"
+dock_6="VstChatDock"
 
 [EditorNode]
 
 open_scenes=PackedStringArray("res://player/player.tscn", "res://world/world.tscn", "res://main.tscn")
 current_scene="res://main.tscn"
-center_split_offset=0
+center_split_offset=-477
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=4
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [EditorWindow]
@@ -43,7 +45,7 @@ position=Vector2i(0, 50)
 
 [ScriptEditor]
 
-open_scripts=["res://player/player.gd"]
+open_scripts=["res://addons/gut/logger.gd", "res://player/player.gd", "res://addons/gut/utils.gd"]
 selected_script="res://player/player.gd"
 open_help=[]
 script_split_offset=440
