--- a/godot-client/.godot/editor/script_editor_cache.cfg
+++ b/godot-client/.godot/editor/script_editor_cache.cfg
@@ -6,8 +6,40 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 39,
+"row": 16,
 "scroll_position": 0.0,
 "selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://addons/gut/utils.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 48,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 157,
+"scroll_position": 152.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://addons/gut/logger.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 8,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 70,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 5,
+"selection_from_line": 70,
+"selection_to_column": 8,
+"selection_to_line": 70,
 "syntax_highlighter": "GDScript"
 }
