--- a/glory-web/package.json
+++ b/glory-web/package.json
@@ -15,9 +15,10 @@
 		"publish": true
 	},
 	"dependencies": {
-		"hono": "4.8.2",
+		"hono": "^4.9.8",
 		"react": "19.0.0",
-		"react-dom": "19.0.0"
+		"react-dom": "19.0.0",
+		"vite-plugin-static-copy": "^3.1.2"
 	},
 	"devDependencies": {
 		"@cloudflare/vite-plugin": "1.7.5",
