feat: add arrows

--- a/godot-client/.godot/editor/quick_open_dialog_cache.cfg
+++ b/godot-client/.godot/editor/quick_open_dialog_cache.cfg
@@ -1,4 +1,4 @@
 [selected_history]
 
 PackedScene=PackedStringArray("uid://bwpreeakt421", "uid://5yd5avbt86oq")
-Texture2D=PackedStringArray("uid://tuqjtmtnycx8", "uid://cclvcn86hsw84")
+Texture2D=PackedStringArray("uid://crhtjoakp6j05", "uid://tuqjtmtnycx8", "res://assets/placeholder_green_texture.tres")
