--- a/godot-client/.godot/editor/editor_layout.cfg
+++ b/godot-client/.godot/editor/editor_layout.cfg
@@ -9,18 +9,18 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/texture_08.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://world/", "res://player/", "res://assets/", "res://addons/")
+dock_filesystem_selected_paths=PackedStringArray("res://player/arrow.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://world/", "res://player/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
 dock_bottom=[]
 dock_closed=[]
-dock_split_2=0
-dock_split_3=624
+dock_split_2=-323
+dock_split_3=829
 dock_hsplit_1=0
 dock_hsplit_2=494
-dock_hsplit_3=-578
+dock_hsplit_3=-517
 dock_hsplit_4=0
 dock_6_selected_tab_idx=0
 dock_3="Scene,Import"
@@ -30,11 +30,11 @@ dock_6="VstChatDock"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://player/player.tscn", "res://world/world.tscn", "res://main.tscn")
-current_scene="res://world/world.tscn"
-center_split_offset=-477
+open_scenes=PackedStringArray("res://player/player.tscn", "res://world/world.tscn", "res://main.tscn", "res://player/arrow.tscn")
+current_scene="res://player/player.tscn"
+center_split_offset=-536
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [EditorWindow]
@@ -46,9 +46,9 @@ size=Vector2i(4576, 2542)
 
 [ScriptEditor]
 
-open_scripts=["res://player/player.gd"]
+open_scripts=["res://player/arrow.gd", "res://player/player.gd"]
 selected_script="res://player/player.gd"
-open_help=[]
+open_help=["Input", "Node2D", "Timer"]
 script_split_offset=440
 list_split_offset=0
 zoom_factor=1.0
