feat: must play the video before the game loads

--- a/godot-client/.godot/editor/editor_layout.cfg
+++ b/godot-client/.godot/editor/editor_layout.cfg
@@ -47,7 +47,7 @@ size=Vector2i(4578, 2542)
 [ScriptEditor]
 
 open_scripts=["res://player/arrow.gd", "res://player/UI/instantiate.gd", "res://lobby/lobby_chat/lobby_chat.gd", "res://lobby/lobby_menu.gd", "res://lobby/lobby_quick_connect.gd", "res://lobby/lobby_system.gd", "res://main.gd", "res://player/player.gd", "res://player/player_admin.gd", "res://player/UI/player_info_item.gd", "res://player/UI/player_ui.gd", "res://world/world.gd"]
-selected_script="res://player/player_admin.gd"
+selected_script="res://main.gd"
 open_help=["@GDScript", "@GlobalScope", "Area2D", "CharacterBody2D", "Label", "Node", "Node2D", "RigidBody2D", "SceneTree", "Window"]
 script_split_offset=504
 list_split_offset=0
