--- a/godot-client/.godot/editor/project_metadata.cfg
+++ b/godot-client/.godot/editor/project_metadata.cfg
@@ -58,7 +58,7 @@ run_instance_count=2.0
 
 [export_options]
 
-default_filename="glory"
+default_filename="index"
 export_debug=false
 
 [texture_region_editor]
