--- a/godot-client/.godot/editor/editor_layout.cfg
+++ b/godot-client/.godot/editor/editor_layout.cfg
@@ -16,11 +16,11 @@ dock_history_include_scene=true
 dock_history_include_global=true
 dock_bottom=[]
 dock_closed=[]
-dock_split_2=156
-dock_split_3=360
+dock_split_2=727
+dock_split_3=-38
 dock_hsplit_1=0
 dock_hsplit_2=400
-dock_hsplit_3=-475
+dock_hsplit_3=-271
 dock_hsplit_4=0
 dock_6_selected_tab_idx=0
 dock_3="Scene,Import"
@@ -30,24 +30,24 @@ dock_6="VstChatDock"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://player/player.tscn", "res://world/world.tscn", "res://main.tscn", "res://player/arrow.tscn", "res://player/player_admin.tscn", "res://lobby/lobby_menu.tscn", "res://player/UI/player_ui.tscn", "res://lobby/lobby_chat/lobby_chat.tscn", "res://player/UI/player_info_item.tscn", "res://lobby/lobby_quick_connect.tscn")
-current_scene="res://main.tscn"
-center_split_offset=-810
-selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
-selected_bottom_panel_item=3
+open_scenes=PackedStringArray("res://player/player.tscn", "res://world/world.tscn")
+current_scene="res://world/world.tscn"
+center_split_offset=-624
+selected_default_debugger_tab_idx=1
+selected_main_editor_idx=0
+selected_bottom_panel_item=0
 
 [EditorWindow]
 
 screen=0
-mode="windowed"
-position=Vector2i(14, 50)
+mode="maximized"
+position=Vector2i(0, 50)
 size=Vector2i(4578, 2542)
 
 [ScriptEditor]
 
-open_scripts=["res://player/arrow.gd", "res://player/UI/instantiate.gd", "res://lobby/lobby_chat/lobby_chat.gd", "res://lobby/lobby_menu.gd", "res://lobby/lobby_quick_connect.gd", "res://lobby/lobby_system.gd", "res://main.gd", "res://player/player.gd", "res://player/player_admin.gd", "res://player/UI/player_info_item.gd", "res://player/UI/player_ui.gd", "res://world/world.gd"]
-selected_script="res://main.gd"
+open_scripts=["res://player/arrow.gd", "res://lobby/lobby_chat/lobby_chat.gd", "res://lobby/lobby_menu.gd", "res://player/UI/instantiate.gd", "res://lobby/lobby_quick_connect.gd", "res://lobby/lobby_system.gd", "res://main.gd", "res://player/player.gd", "res://player/player_admin.gd", "res://player/UI/player_info_item.gd", "res://player/UI/player_ui.gd", "res://world/world.gd"]
+selected_script="res://world/world.gd"
 open_help=["@GDScript", "@GlobalScope", "Area2D", "CharacterBody2D", "Label", "Node", "Node2D", "RigidBody2D", "SceneTree", "Window"]
 script_split_offset=504
 list_split_offset=0
