--- a/godot-client/.godot/editor/project_metadata.cfg
+++ b/godot-client/.godot/editor/project_metadata.cfg
@@ -11,8 +11,8 @@ use_advanced_connections=false
 [dialog_bounds]
 
 create_new_node=Rect2(688, 132, 2336, 1832)
-project_settings=Rect2(498, 344, 3382, 1794)
-export=Rect2(330, 184, 3106, 2250)
+project_settings=Rect2(84, 236, 3382, 1794)
+export=Rect2(330, 106, 3106, 2054)
 
 [script_setup]
 
@@ -31,7 +31,7 @@ last_mode=1
 [color_picker]
 
 picker_shape=3
-recent_presets=PackedColorArray(0.2810093, 0.03188224, 0.45420682, 1, 0.101960786, 0.101960786, 0.101960786, 0.63529414, 1, 1, 1, 0.63529414, 0.76845694, 0.76845694, 0.76845694, 0.63529414, 1, 0.29411766, 1, 0.4, 0, 0, 0, 0.54509807, 0, 0, 0, 1, 0.14117648, 0.14117648, 0.14117648, 0, 0.79463774, 0.27521873, 0.81019086, 0.41960785)
+recent_presets=PackedColorArray(0.76845694, 0.76845694, 0.76845694, 0.63529414, 1, 0.29411766, 1, 0.4, 0, 0, 0, 0.54509807, 0, 0, 0, 1, 0.14117648, 0.14117648, 0.14117648, 0, 0.79463774, 0.27521873, 0.81019086, 0.41960785, 1, 1, 1, 0.003921569, 1, 1, 1, 0.49803922, 1, 1, 1, 0.5882353)
 
 [debug_options]
 
@@ -40,9 +40,9 @@ run_main_feature_tags=""
 multiple_instances_enabled=true
 run_instances_config=Array[Dictionary]([{
 "arguments": "",
-"features": "admin",
+"features": "",
 "override_args": false,
-"override_features": true
+"override_features": false
 }, {
 "arguments": "",
 "features": "",
@@ -54,11 +54,11 @@ run_instances_config=Array[Dictionary]([{
 "override_args": false,
 "override_features": false
 }])
-run_instance_count=2.0
+run_instance_count=1.0
 
 [export_options]
 
-default_filename="index"
+default_filename="glory"
 export_debug=false
 
 [texture_region_editor]
