--- a/godot-client/.godot/editor/quick_open_dialog_cache.cfg
+++ b/godot-client/.godot/editor/quick_open_dialog_cache.cfg
@@ -1,5 +1,5 @@
 [selected_history]
 
-PackedScene=PackedStringArray("uid://bodmr74jwgi5g", "uid://c1ms5qh1e78o2", "uid://6eoclhsx0qae", "uid://bwpreeakt421", "uid://5yd5avbt86oq")
+PackedScene=PackedStringArray("uid://cr0rjm7booup1", "uid://bodmr74jwgi5g", "uid://c1ms5qh1e78o2", "uid://6eoclhsx0qae", "uid://bwpreeakt421", "uid://5yd5avbt86oq")
 Texture2D=PackedStringArray("res://assets/pointer_green.png", "res://addons/very-simple-twitch/icon.png", "res://assets/texture_08.png")
 Font=PackedStringArray("uid://bnudr3myap7vs")
