--- a/godot-client/.godot/editor/script_editor_cache.cfg
+++ b/godot-client/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 25,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 118,
-"scroll_position": 72.0,
+"row": 182,
+"scroll_position": 168.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -17,11 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 19,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 33,
-"scroll_position": 2.0,
+"row": 9,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -45,11 +45,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 16,
+"column": 13,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 66,
-"scroll_position": 56.0,
+"row": 69,
+"scroll_position": 53.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -59,11 +59,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 30,
+"column": 56,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 6,
-"scroll_position": 0.0,
+"row": 113,
+"scroll_position": 53.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -76,8 +76,8 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 28,
-"scroll_position": 200.0,
+"row": 265,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -87,11 +87,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 8,
+"column": 24,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 57,
-"scroll_position": 37.0,
+"row": 91,
+"scroll_position": 69.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -115,11 +115,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 20,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 16,
-"scroll_position": 0.0,
+"row": 31,
+"scroll_position": 5.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -133,7 +133,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 128,
-"scroll_position": 104.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -162,6 +162,20 @@ state={
 "h_scroll_position": 0,
 "row": 0,
 "scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://lobby/lobby_color_grid/lobby_color_grid.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 43,
+"scroll_position": 20.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
