feat: damage and death

--- a/godot-client/.gitignore
+++ b/godot-client/.gitignore
@@ -1,8 +1,8 @@
 # Godot 4+ specific ignores
-godot_client/.godot/
+.godot/
 *.pem
-godot_client/dist/
-godot_client/dist_app/
+dist/
+dist_app/
 .DS_Store
 node_modules
 dist
