--- a/godot-client/.godot/editor/editor_layout.cfg
+++ b/godot-client/.godot/editor/editor_layout.cfg
@@ -9,18 +9,18 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://player/arrow.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://world/", "res://player/", "res://player/UI/")
+dock_filesystem_selected_paths=PackedStringArray("res://player/player_admin.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://world/", "res://player/", "res://player/UI/", "res://lobby/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
 dock_bottom=[]
 dock_closed=[]
-dock_split_2=119
-dock_split_3=502
+dock_split_2=444
+dock_split_3=388
 dock_hsplit_1=0
-dock_hsplit_2=379
-dock_hsplit_3=-319
+dock_hsplit_2=316
+dock_hsplit_3=-368
 dock_hsplit_4=0
 dock_6_selected_tab_idx=0
 dock_3="Scene,Import"
@@ -30,10 +30,10 @@ dock_6="VstChatDock"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://player/player.tscn", "res://world/world.tscn", "res://player/player_admin.tscn", "res://player/UI/player_ui.tscn", "res://lobby/lobby_color_grid/lobby_color_grid.tscn", "res://lobby/lobby_quick_connect.tscn", "res://player/arrow.tscn")
-current_scene="res://player/arrow.tscn"
-center_split_offset=-715
-selected_default_debugger_tab_idx=8
+open_scenes=PackedStringArray("res://player/player.tscn", "res://lobby/lobby_quick_connect.tscn", "res://player/player_admin.tscn", "res://world/world.tscn", "res://systems/health_system.tscn", "res://main.tscn")
+current_scene="res://player/player.tscn"
+center_split_offset=-501
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
@@ -41,15 +41,15 @@ selected_bottom_panel_item=0
 
 screen=0
 mode="windowed"
-position=Vector2i(14, 66)
-size=Vector2i(3810, 2078)
+position=Vector2i(16, 50)
+size=Vector2i(3808, 2110)
 
 [ScriptEditor]
 
-open_scripts=["res://player/arrow.gd", "res://player/UI/instantiate.gd", "res://lobby/lobby_chat/lobby_chat.gd", "res://lobby/lobby_color_grid/lobby_color_grid.gd", "res://lobby/lobby_menu.gd", "res://lobby/lobby_quick_connect.gd", "res://lobby/lobby_system.gd", "res://main.gd", "res://player/player.gd", "res://player/player_admin.gd", "res://player/UI/player_info_item.gd", "res://player/UI/player_ui.gd", "res://world/world.gd"]
-selected_script="res://player/arrow.gd"
-open_help=["@GDScript", "@GlobalScope", "Area2D", "CharacterBody2D", "Label", "Node", "Node2D", "RigidBody2D", "SceneTree", "Window"]
-script_split_offset=504
+open_scripts=["res://systems/health_system.gd", "res://lobby/lobby_color_grid/lobby_color_grid.gd", "res://lobby/lobby_menu.gd", "res://lobby/lobby_quick_connect.gd", "res://lobby/lobby_system.gd", "res://main.gd", "res://player/player.gd", "res://player/player_admin.gd", "res://player/UI/player_ui.gd", "res://world/world.gd"]
+selected_script="res://player/player.gd"
+open_help=["@GlobalScope", "Node", "Node2D", "Window"]
+script_split_offset=534
 list_split_offset=0
 zoom_factor=1.0733334
 
