--- a/godot-client/.godot/global_script_class_cache.cfg
+++ b/godot-client/.godot/global_script_class_cache.cfg
@@ -1,4 +1,12 @@
 list=[{
+"base": &"Node",
+"class": &"HealthSystem",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://systems/health_system.gd"
+}, {
 "base": &"Object",
 "class": &"Instantiate",
 "icon": "",
