--- a/godot-client/.godot/global_script_class_cache.cfg
+++ b/godot-client/.godot/global_script_class_cache.cfg
@@ -47,6 +47,14 @@ list=[{
 "language": &"GDScript",
 "path": "res://player/UI/player_ui.gd"
 }, {
+"base": &"StaticBody2D",
+"class": &"Target",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://game/target/target.gd"
+}, {
 "base": &"Node",
 "class": &"VSTAPI",
 "icon": "",
