--- a/godot-client/.godot/editor/editor_layout.cfg
+++ b/godot-client/.godot/editor/editor_layout.cfg
@@ -9,18 +9,18 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://game/target/target.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://game/", "res://game/world3D/", "res://game/target/", "res://game/game3D/", "res://assets/progress-bar/", "res://assets/progress-bar/Scripts/", "res://assets/progress-bar/Scenes/")
+dock_filesystem_selected_paths=PackedStringArray("res://lobby/lobby_menu.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://lobby/", "res://game/", "res://game/world3D/", "res://game/target/", "res://game/game3D/", "res://assets/progress-bar/", "res://assets/progress-bar/Scripts/", "res://assets/progress-bar/Scenes/")
 dock_node_current_tab=1
 dock_history_include_scene=true
 dock_history_include_global=true
 dock_bottom=[]
 dock_closed=[]
-dock_split_2=645
-dock_split_3=193
+dock_split_2=432
+dock_split_3=315
 dock_hsplit_1=0
-dock_hsplit_2=377
-dock_hsplit_3=-277
+dock_hsplit_2=415
+dock_hsplit_3=-493
 dock_hsplit_4=0
 dock_6_selected_tab_idx=0
 dock_3="Scene,Import"
@@ -30,10 +30,10 @@ dock_6="VstChatDock"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://player/player.tscn", "res://player/UI/player_ui.tscn", "res://player/arrow.tscn", "res://player/player_admin.tscn", "res://systems/health_system.tscn", "res://world/world.tscn", "res://game/game3D/player3D/player3D.tscn", "res://game/world3D/world3D.tscn", "res://game/target/target.tscn")
-current_scene="res://world/world.tscn"
-center_split_offset=-692
-selected_default_debugger_tab_idx=0
+open_scenes=PackedStringArray()
+current_scene=""
+center_split_offset=-727
+selected_default_debugger_tab_idx=8
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
@@ -46,9 +46,9 @@ size=Vector2i(3808, 2110)
 
 [ScriptEditor]
 
-open_scripts=["res://player/arrow.gd", "res://assets/progress-bar/Scripts/demo_controller.gd", "res://player/player.gd", "res://player/player_admin.gd", "res://game/target/target.gd", "res://world/world.gd"]
+open_scripts=["res://player/player.gd", "res://world/world.gd"]
 selected_script="res://player/player.gd"
-open_help=["DisplayServer"]
+open_help=[]
 script_split_offset=336
 list_split_offset=424
 zoom_factor=1.1448891
