--- a/godot-client/.godot/editor/script_editor_cache.cfg
+++ b/godot-client/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 35,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 141,
-"scroll_position": 133.08008,
+"scroll_position": 133.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -59,16 +59,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 18,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 70,
-"scroll_position": 46.0,
-"selection": true,
-"selection_from_column": 5,
-"selection_from_line": 58,
-"selection_to_column": 0,
-"selection_to_line": 70,
+"row": 130,
+"scroll_position": 112.909996,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -80,8 +76,8 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 261,
-"scroll_position": 0.0,
+"row": 230,
+"scroll_position": 220.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
