--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -55,7 +55,7 @@ custom_features="admin"
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="dist_app/glory.dmg"
+export_path="../glory.dmg"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
